# python-project-lvl1

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py
