[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""

packages = [
  { include = "brain_games" },
]

authors = ["shadowcat2000 <mpavlov89@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
